created blob animation on the auth screen

--- a/svelte-kanban/src/app.css
+++ b/svelte-kanban/src/app.css
@@ -76,3 +76,29 @@
 		@apply bg-background text-foreground;
 	}
 }
+
+@layer utilities {
+	.animation-delay-1000 {
+		animation-delay: 1000ms;
+	}
+	.animation-delay-2000 {
+		animation-delay: 2000ms;
+	}
+	.animation-delay-3000 {
+		animation-delay: 3000ms;
+	}
+	.animation-delay-4000 {
+		animation-delay: 4000ms;
+	}
+	.animation-delay-5000 {
+		animation-delay: 5000ms;
+	}
+
+	.animation-delay-6000 {
+		animation-delay: 6000ms;
+	}
+
+	.animation-delay-7000 {
+		animation-delay: 7000ms;
+	}
+}
